fix welcome page white space

--- a/app/assets/stylesheets/welcome.scss
+++ b/app/assets/stylesheets/welcome.scss
@@ -29,6 +29,7 @@ html {
 body {
   min-height: 100%;
   position: relative;
+  overflow-x: hidden;
 }
 
 .header {
